--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
+	<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Bootstrap JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,19 +73,29 @@
 
 </head>
 
-<body>
+<body class="bg-light">
 
-    <div class="login-container">
-        <h2>UTAR Admin Login</h2>
-        <form action="your_server_script_here" method="post">
-            <label for="username">Admin ID:</label>
-            <input type="text" id="adminID" name="adminID" required>
-
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-
-            <button type="button" onclick="loginAdmin()">Login</button>
-        </form>
+    <div class="container">
+        <div class="row justify-content-center align-items-center" style="height: 100vh;">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="text-center">UTAR Admin Login</h2>
+                        <form action="your_server_script_here" method="post">
+                            <div class="form-group">
+                                <label for="adminID">Admin ID:</label>
+                                <input type="text" id="adminID" name="adminID" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password:</label>
+                                <input type="password" id="password" name="password" class="form-control" required>
+                            </div>
+                            <button type="button" class="btn btn-primary btn-block" onclick="loginAdmin()">Login</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
