--- a/adminMain.html
+++ b/adminMain.html
@@ -17,7 +17,7 @@
 
                         <a href="notificationCRUD.html" class="btn btn-primary btn-block mb-3">Send Notification</a>
                         <a href="#" class="btn btn-primary btn-block mb-3">Approve Student Information</a>
-                        <a href="#" class="btn btn-primary btn-block mb-3">Approve Timetable</a>
+                        <a href="timetable.html" class="btn btn-primary btn-block mb-3">Timetable</a>
 						<a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
                     </div>
                 </div>
