--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         const firebaseConfig = {
               apiKey: "AIzaSyBtSdg0XwU3cePNEn-HVlof8vj_imx0guA",
   authDomain: "utarapp-9f3db.firebaseapp.com",
+  authDomain: "pctan9491.github.io",
   projectId: "utarapp-9f3db",
   storageBucket: "utarapp-9f3db.appspot.com",
   messagingSenderId: "331019317153",
