--- a/timetable.html
+++ b/timetable.html
@@ -16,6 +16,7 @@
                         <h2 class="text-center mb-4">Admin Timetable Page</h2>
 
                         <a href="createCourse.html" class="btn btn-primary btn-block mb-3">Create Course</a>
+						<a href="chooseCourse.html" class="btn btn-primary btn-block mb-3">Assign Course</a>
                         <a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
                     </div>
                 </div>
