--- a/createCourse.html
+++ b/createCourse.html
@@ -38,23 +38,54 @@
             </div>
 
             <div class="form-group">
-                <label for="faculty">Faculty:</label>
-                <select class="form-control" id="faculty" name="faculty" required onchange="checkOther(this.value)">
-                    <option value="" disabled selected>Select a faculty</option>
-                    <option value="FAM">FACULTY OF ACCOUNTANCY AND MANAGEMENT</option>
-                    <option value="FAS">FACULTY OF ARTS AND SOCIAL SCIENCE</option>
-                    <option value="FBF">FACULTY OF BUSINESS AND FINANCE</option>
-                    <option value="FCI">FACULTY OF CREATIVE INDUSTRIES</option>
-                    <option value="FEGT">FACULTY OF ENGINEERING AND GREEN TECHNOLOGY</option>
-                    <option value="FICT">FACULTY OF INFORMATION AND COMMUNICATION TECHNOLOGY</option>
-					<option value="FSC">FACULTY OF SCIENCE</option>
-                    <option value="ICS">INSTITUTE OF CHINESE STUDIES</option>
-                    <option value="LKC FES">LEE KONG CHIAN FACULTY OF ENGINEERING AND SCIENCE</option>
-                    <option value="MK FMHS">M. KANDIAH FACULTY OF MEDICINE AND HEALTH SCIENCES</option>
-                    <option value="other">Others</option>
-</select>
+    <label>Faculty:</label><br>
+    <input type="checkbox" id="FAM" name="faculty" value="FAM">
+    <label for="FAM">FACULTY OF ACCOUNTANCY AND MANAGEMENT</label><br>
+    
+    <input type="checkbox" id="FAS" name="faculty" value="FAS">
+    <label for="FAS">FACULTY OF ARTS AND SOCIAL SCIENCE</label><br>
+
+    <input type="checkbox" id="FBF" name="faculty" value="FBF">
+    <label for="FBF">FACULTY OF BUSINESS AND FINANCE</label><br>
+
+    <input type="checkbox" id="FCI" name="faculty" value="FCI">
+    <label for="FCI">FACULTY OF CREATIVE INDUSTRIES</label><br>
+
+    <input type="checkbox" id="FEGT" name="faculty" value="FEGT">
+    <label for="FEGT">FACULTY OF ENGINEERING AND GREEN TECHNOLOGY</label><br>
+
+    <input type="checkbox" id="FICT" name="faculty" value="FICT">
+    <label for="FICT">FACULTY OF INFORMATION AND COMMUNICATION TECHNOLOGY</label><br>
+
+    <input type="checkbox" id="FSC" name="faculty" value="FSC">
+    <label for="FSC">FACULTY OF SCIENCE</label><br>
+
+    <input type="checkbox" id="ICS" name="faculty" value="ICS">
+    <label for="ICS">INSTITUTE OF CHINESE STUDIES</label><br>
+
+    <input type="checkbox" id="LKC FES" name="faculty" value="LKC FES">
+    <label for="LKC FES">LEE KONG CHIAN FACULTY OF ENGINEERING AND SCIENCE</label><br>
+
+    <input type="checkbox" id="MK FMHS" name="faculty" value="MK FMHS">
+    <label for="MK FMHS">M. KANDIAH FACULTY OF MEDICINE AND HEALTH SCIENCES</label><br>
+
+    <input type="checkbox" id="other" name="faculty" value="other" onchange="checkOther(this.value)">
+    <label for="other">Others</label>
+</div>
 <input type="text" class="form-control mt-2" id="otherFaculty" name="otherFaculty" placeholder="Enter other faculty shortkey" style="display: none;">
-            </div>
+
+			
+			<div class="form-group">
+    <label>Class Type:</label><br>
+    <input type="checkbox" id="lecture" name="courseType" value="Lecture" checked disabled>
+    <label for="lecture">Lecture</label><br>
+
+    <input type="checkbox" id="tutorial" name="courseType" value="Tutorial">
+    <label for="tutorial">Tutorial</label><br>
+
+    <input type="checkbox" id="practical" name="courseType" value="Practical">
+    <label for="practical">Practical</label>
+</div>
 
             <button type="submit" class="btn btn-primary">Add Entry</button>
         </form>
@@ -85,18 +116,28 @@
     // Get the values from the form
     const courseCode = document.getElementById('courseCode').value;
     const courseTitle = document.getElementById('courseTitle').value;
-    let faculty = document.getElementById('faculty').value;
+	const selectedTypes = Array.from(document.querySelectorAll('input[name="courseType"]:checked')).map(checkbox => checkbox.value);
+// Inside the form submission event listener:
+const selectedFaculties = Array.from(document.querySelectorAll('input[name="faculty"]:checked')).map(checkbox => checkbox.value);
 
-    // If 'other' is selected, use the input value
-    if (faculty === 'other') {
-        faculty = document.getElementById('otherFaculty').value;
+// If 'other' is selected, use the input value
+if (selectedFaculties.includes('other')) {
+    const otherFacultyValue = document.getElementById('otherFaculty').value;
+    // Add the other faculty value to the selected faculties list
+    selectedFaculties.push(otherFacultyValue);
+    // Remove the 'other' placeholder
+    const index = selectedFaculties.indexOf('other');
+    if (index > -1) {
+        selectedFaculties.splice(index, 1);
     }
+}
 
     // Add the data to Firestore
     db.collection('course').add({
         courseCode: courseCode,
         courseTitle: courseTitle,
-        faculty: faculty
+        faculty: selectedFaculties,
+		classTypes: selectedTypes
     })
     .then(function(docRef) {
         console.log("Document written with ID: ", docRef.id);
