--- a/timetable.html
+++ b/timetable.html
@@ -17,6 +17,8 @@
 
                         <a href="createCourse.html" class="btn btn-primary btn-block mb-3">Create Course</a>
 						<a href="chooseCourse.html" class="btn btn-primary btn-block mb-3">Assign Course</a>
+						<a href="addTimetable.html" class="btn btn-primary btn-block mb-3">Add Timetable</a>
+						<a href="approveTimetable.html" class="btn btn-primary btn-block mb-3">Approve Timetable</a>
                         <a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
                     </div>
                 </div>
